fixed radio button on mobile, made createing teams more intuitive

--- a/src/components/category/category.css
+++ b/src/components/category/category.css
@@ -32,26 +32,3 @@ section.category.active-category{
   background-color: whitesmoke;
   font-size:18px;
 }
-
-button{
-    height:30px;
-    margin:10px;
-    width:150px;
-    border-radius:12px;
-    font-weight: bold;
-}
-button.css_add_expense{
-    color:blue
-}
-button.css_add_expense:hover{
-    color:white;
-    background-color: blue;
-}
-button.css_expense_detail{
-    color:green;
-}
-button.css_expense_detail:hover{
-    color:white;
-    background-color:green;
-}
-
